# OmniHawk-AI

./: .gitignore  CONTRIBUTING.md  LICENSE  README-AR.md  README-BN.md  README-EN.md  README-ES.md  README-FR.md  README-HI.md  README-JA.md  README-KO.md  README-PT.md  README.md  ROADMAP.md  pyproject.toml  templates.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-ai-and-config.yml
.github/workflows/: crawler.yml  docker.yml  issue-guard.yml
config/: ai_analysis_prompt.txt  ai_interests.txt  ai_translation_prompt.txt  config.yaml  frequency_words.txt  paper_analysis_prompt.txt  timeline.yaml
docker/: .env.example  Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
docs/: AI-INTELLIGENCE-OS.md  CONNECTOR-SDK.md  EXPANSION-PLAN-ZH.md
mcp_server/: __init__.py  server.py
omnihawk_ai/: __init__.py  __main__.py  agent_cli.py  context.py
omnihawk_ai/ai/: analyzer.py  filter.py  paper_analyzer.py  translator.py
omnihawk_ai/core/: __init__.py  analyzer.py  data.py  loader.py
omnihawk_ai/crawler/: __init__.py
omnihawk_ai/notification/: __init__.py  dispatcher.py  renderer.py  senders.py  splitter.py
omnihawk_ai/report/: __init__.py  formatter.py  html.py  rss_html.py
omnihawk_ai/storage/: __init__.py  base.py  local.py  manager.py  remote.py  sqlite_mixin.py
omnihawk_ai/translation/: __init__.py  fast_translator.py
omnihawk_ai/utils/: __init__.py
omnihawk_ai/web/: __init__.py  panel_server.py  panel_templates.py  progress_repo.py
openhawk_ai/: __init__.py  __main__.py  agent_cli.py  context.py
openhawk_ai/ai/: filter.py  (+4 more)
trendradar/: __init__.py  __main__.py
(+48 files in other folders)
