[project]
name = "omnihawk-ai"
version = "6.6.1"
description = "OmniHawk AI - Global AI intelligence radar platform"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "requests==2.33.0",
    "pytz==2026.1",
    "PyYAML==6.0.3",
    "fastmcp==2.12.5",
    "websockets==13.1",
    "feedparser==6.0.12",
    "boto3==1.42.76",
    "litellm==1.82.6",
    "json-repair==0.58.6",
    "tenacity==8.5.0",
    "markitdown[pdf]>=0.1.5",
]

[project.scripts]
omnihawk-ai = "omnihawk_ai.__main__:main"
omnihawk-ai-mcp = "mcp_server.server:run_server"
omnihawk-ai-cli = "omnihawk_ai.agent_cli:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnihawk_ai", "mcp_server"]
